--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -58,6 +58,11 @@
   src: url('/assets/fonts/Martel_Sans/MartelSans-Light.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Caramel-Regular';
+  src: url('/assets/fonts/Montserrat/Caramel-Regular.ttf') format('truetype');
+}
+
 // @font-face {
 //   font-family: "OpenSans-Regular";
 //   src: url("/assets/fonts/Open_Sans/OpenSans-Regular.ttf") format("truetype");
