--- a/src/Components/Common/ScrollableCards/ScrollableCards.scss
+++ b/src/Components/Common/ScrollableCards/ScrollableCards.scss
@@ -246,6 +246,23 @@
     line-height: 13px;
   }
 
+  &__noReviewsText {
+    font-size: 12px;
+    font-family: 'Montserrat-Regular';
+    margin-bottom: 3px;
+    padding-left: 5px;
+    text-align: left;
+    color: white;
+  }
+
+  &__negativeMargin {
+    margin-bottom: -5px !important
+  }
+
+  &__negativeMargin2 {
+    margin-bottom: 3px !important
+  }
+
   &__courseCardHeading {
     font-size: $spacer * 0.75;
     font-family: $semiBold;
@@ -531,9 +548,9 @@
 }
 
 .desktopDisplayforCards {
-  width: 95%;
-  margin-left: auto;
-  margin-right: auto;
+  width: 99%;
+  margin-left: 10px;
+  margin-right: 0px;
 }
 
 .deskDisplayLC {
